--- a/gateway_host/platformio.ini
+++ b/gateway_host/platformio.ini
@@ -12,8 +12,8 @@
 platform = espressif8266
 board = esp07
 framework = arduino
-lib_deps = Wire
-upload_speed = 74880
+lib_deps = pjon, ArduinoJson
+#upload_speed = 74880
 board_flash_mode = dio
 monitor_speed = 74880
 monitor_baud = 74880
