--- a/gateway_wifi_connector/platformio.ini
+++ b/gateway_wifi_connector/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif8266
 board = esp07
 framework = arduino
-lib_deps = pjon, ArduinoJson
+lib_deps = pjon, ArduinoJson, PubSubClient
 #upload_speed = 9600
 board_flash_mode = dio
 monitor_speed = 74880
