--- a/client/platformio.ini
+++ b/client/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif8266
 board = esp07
 framework = arduino
-lib_deps = ArduinoJson
+lib_deps = ArduinoJson,WifiEspNow
 upload_speed = 74880
 board_flash_mode = dio
 monitor_speed = 74880
